tests/failed/07-duplicated-attr.stderr
error: please specify default endian
  --> $DIR/07-duplicated-attr.rs:9:1
   |
9  | / #[endian(big)]
10 | | #[endian(native)]
11 | | struct Nope;
   | |____________^
